--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
 
 
         <!-- cinco botones -->
-        <button type="button" class="btn btn-info"><i class="fa-solid fa-right-to-bracket"></i> acceder</button>
+        <button style="margin-top: 10px;" type="button" class="btn btn-info"><i class="fa-solid fa-right-to-bracket"></i> acceder</button>
         <!-- te lleva a ver la actividades -->
-        <a href="actividades.html"><button type="button" class="btn btn-warning"><i
+        <a href="actividades.html"><button style="margin-top: 10px;" type="button" class="btn btn-warning"><i
             class="fa-solid fa-book-open-reader"></i> actividades</button></a>
 
-        <button type="button" class="btn btn-danger"><i class="fa-solid fa-newspaper"></i> blog</button>
+        <button style="margin-top: 10px;" type="button" class="btn btn-danger"><i class="fa-solid fa-newspaper"></i> blog</button>
 
         <!-- te lleva a ver información sobre la app -->
-        <a href="sobrenosotros.html"><button type="button" class="btn btn-success"><i
+        <a href="sobrenosotros.html"><button style="margin-top: 10px;" type="button" class="btn btn-success"><i
                     class="fa-solid fa-chalkboard-user"></i> sobre nosotros</button></a>
 
-        <button type="button" class="btn btn-light"> <i class="fa-solid fa-paper-plane"></i></button>
+        <button style="margin-top: 10px;" type="button" class="btn btn-light"> <i class="fa-solid fa-paper-plane"></i></button>
 
 
 
